# Epidemic

./: CMakeLists.txt  README.md  cellular_automaton.cpp  main_graph.cpp
epidemic/: epidemic.cpp  epidemic.hpp  epidemic.test.cpp
graph/: draw.cpp  draw.hpp  graph.test.cpp
graph/curve/: curve.cpp  curve.hpp
graph/grid/: grid.cpp  grid.hpp
graph/key/: key.cpp  key.hpp
graph/text/: text.cpp  text.hpp
simulation/: simulation.cpp  simulation.hpp  simulation.test.cpp
